service/app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-redis
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: hoangduc02011998/go-pod:test-redis
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8081
