service/app-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  selector:
    app: myapp-redis
  type: ClusterIP
  ports:
  - port: 8089 # port of service
    targetPort: 8089 # port map with container
