service/app-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-loadbalancer
spec:
  selector:
    app: myapp-redis
  type: LoadBalancer
  externalIPs:
    - 192.168.49.2
  ports:
  - port: 8081
    targetPort: 8081
