service/app-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-nodeport
spec:
  selector:
    app: myapp-redis
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30123 # port of worker node
    protocol: TCP
